--- a/Predicciones_Ventas.ipynb
+++ b/Predicciones_Ventas.ipynb
@@ -260,6 +260,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#forma alternativa de ingresar datos faltantes\n",
         "df.fillna(value=0,inplace=True)\n",
         "df"
       ],
@@ -269,9 +270,9 @@
           "height": 661
         },
         "id": "I2uS-NOuKxzl",
-        "outputId": "f8949897-cfa4-451e-fa81-6fb1c361dc98"
+        "outputId": "11c4c81a-dfab-4f5a-ff7b-194a6abf45a1"
       },
-      "execution_count": 43,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +334,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-61f1fd04-534d-4e96-90f6-46353256fb98\">\n",
+              "  <div id=\"df-f3885c86-35bf-449c-85d5-9da85a3ca479\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -537,7 +538,7 @@
               "</table>\n",
               "<p>8523 rows × 12 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-61f1fd04-534d-4e96-90f6-46353256fb98')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f3885c86-35bf-449c-85d5-9da85a3ca479')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -588,12 +589,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-61f1fd04-534d-4e96-90f6-46353256fb98 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f3885c86-35bf-449c-85d5-9da85a3ca479 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-61f1fd04-534d-4e96-90f6-46353256fb98');\n",
+              "          const element = document.querySelector('#df-f3885c86-35bf-449c-85d5-9da85a3ca479');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -616,7 +617,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 44
         }
       ]
     }
